@@ -15,7 +15,6 @@ import org.springframework.stereotype.Component;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Data
 @Component
@@ -52,7 +51,7 @@ public class EquivalencyRule implements Rule {
                 .filter(gradProgramRule -> "M".compareTo(gradProgramRule.getProgramRequirementCode().getRequirementTypeCode().getReqTypeCode()) == 0
                         && "Y".compareTo(gradProgramRule.getProgramRequirementCode().getActiveRequirement()) == 0
                         && "A".compareTo(gradProgramRule.getProgramRequirementCode().getRequirementCategory()) == 0)
-                .collect(Collectors.toList());
+                .toList();
         logger.debug("Matched Program rules list size {}", gradProgramRulesMatch.size());
 
         // 1. check assessment is empty or failed
@@ -72,7 +71,7 @@ public class EquivalencyRule implements Rule {
             List<CourseRequirement> matchedCourseRequirements = courseRequirementsForEquivalency.stream()
                     .filter(equivCr -> equivCr.getCourseCode().compareTo(st.getCourseCode()) == 0
                             && equivCr.getCourseLevel().compareTo(st.getCourseLevel()) == 0)
-                    .collect(Collectors.toList());
+                    .toList();
             matchedCourseRequirements.stream().forEach(courseRequirement -> {
                 ProgramRequirement programRule = null;
                 if (courseRequirement != null) {
@@ -95,7 +94,7 @@ public class EquivalencyRule implements Rule {
             // merge studentAssessments with finalAssessmentList
             // => if any of finalAssessments already exists in studentAssessments, remove the current one and add the new one.
             List<StudentAssessment> tempAssessments = ruleProcessorData.getStudentAssessments().stream()
-                    .filter(sa -> !finalAssessmentList.contains(sa)).collect(Collectors.toList());
+                    .filter(sa -> !finalAssessmentList.contains(sa)).toList();
             tempAssessments.addAll(finalAssessmentList);
             ruleProcessorData.setStudentAssessments(tempAssessments);
         }
@@ -105,7 +104,7 @@ public class EquivalencyRule implements Rule {
                 .stream()
                 .filter(gradProgramRule -> "M".compareTo(gradProgramRule.getProgramRequirementCode().getRequirementTypeCode().getReqTypeCode()) != 0
                         || "A".compareTo(gradProgramRule.getProgramRequirementCode().getRequirementCategory()) != 0)
-                .collect(Collectors.toList()));
+                .toList());
 
         ruleProcessorData.setGradProgramRules(finalProgramRulesList);
     }
@@ -113,7 +112,7 @@ public class EquivalencyRule implements Rule {
     private void handleFailedRules(List<ProgramRequirement> finalProgramRulesList, List<GradRequirement> requirementsMet, List<ProgramRequirement> gradProgramRulesMatch) {
         List<ProgramRequirement> successfulRules = finalProgramRulesList.stream()
                 .filter(pr -> pr.getProgramRequirementCode().isPassed())
-                .collect(Collectors.toList());
+                .toList();
 
         if(gradProgramRulesMatch.size() != finalProgramRulesList.size()) {
             List<ProgramRequirement> unusedRules = RuleEngineApiUtils.getCloneProgramRule(gradProgramRulesMatch);
@@ -122,7 +121,7 @@ public class EquivalencyRule implements Rule {
         }
 
         List<ProgramRequirement> failedRules = finalProgramRulesList.stream()
-                .filter(pr -> !pr.getProgramRequirementCode().isPassed()).collect(Collectors.toList());
+                .filter(pr -> !pr.getProgramRequirementCode().isPassed()).toList();
 
         if (failedRules.isEmpty()) {
             logger.debug("All the failed assessment match rules met the assessment equivalency requirement!");
@@ -135,9 +134,9 @@ public class EquivalencyRule implements Rule {
         // if any failed assessments from the previous processors meet the assessment equivalency requirement,
         // then remove it from nonGradReason.
         if (!successfulRules.isEmpty()) {
-            List<String> successfulRuleCodes = successfulRules.stream().map(pr -> pr.getProgramRequirementCode().getProReqCode()).collect(Collectors.toList());
+            List<String> successfulRuleCodes = successfulRules.stream().map(pr -> pr.getProgramRequirementCode().getProReqCode()).toList();
             List<GradRequirement> nonGradReasons = ruleProcessorData.getNonGradReasons().stream()
-                    .filter(gr -> !successfulRuleCodes.contains(gr.getRule())).collect(Collectors.toList());
+                    .filter(gr -> !successfulRuleCodes.contains(gr.getRule())).toList();
             ruleProcessorData.setNonGradReasons(nonGradReasons);
         }
 
@@ -191,7 +190,7 @@ public class EquivalencyRule implements Rule {
                 .filter(gradOptionalProgramRule -> "M".compareTo(gradOptionalProgramRule.getOptionalProgramRequirementCode().getRequirementTypeCode().getReqTypeCode()) == 0
                         && "Y".compareTo(gradOptionalProgramRule.getOptionalProgramRequirementCode().getActiveRequirement()) == 0
                         && "A".compareTo(gradOptionalProgramRule.getOptionalProgramRequirementCode().getRequirementCategory()) == 0)
-                .collect(Collectors.toList());
+                .toList();
 
         // 1. check assessment is empty or failed
         List<StudentAssessment> studentAssessments = RuleProcessorRuleUtils.getUniqueStudentAssessments(
@@ -212,7 +211,7 @@ public class EquivalencyRule implements Rule {
             List<CourseRequirement> matchedCourseRequirements = courseRequirementsForEquivalency.stream()
                     .filter(equivCr -> equivCr.getCourseCode().compareTo(st.getCourseCode()) == 0
                                     && equivCr.getCourseLevel().compareTo(st.getCourseLevel()) == 0)
-                    .collect(Collectors.toList());
+                    .toList();
             matchedCourseRequirements.stream().forEach(courseRequirement -> {
                 OptionalProgramRequirement optionalProgramRule = null;
                 if (courseRequirement != null) {
@@ -235,7 +234,7 @@ public class EquivalencyRule implements Rule {
             // merge studentAssessments with finalAssessmentList
             // => if any of finalAssessments already exists in studentAssessments, remove the current one and add the new one.
             List<StudentAssessment> tempAssessments = obj.getStudentAssessmentsOptionalProgram().stream()
-                    .filter(sa -> !finalAssessmentList.contains(sa)).collect(Collectors.toList());
+                    .filter(sa -> !finalAssessmentList.contains(sa)).toList();
             tempAssessments.addAll(finalAssessmentList);
             obj.setStudentAssessmentsOptionalProgram(tempAssessments);
         }
@@ -245,7 +244,7 @@ public class EquivalencyRule implements Rule {
                 .stream()
                 .filter(optionalProgramRule -> "M".compareTo(optionalProgramRule.getOptionalProgramRequirementCode().getRequirementTypeCode().getReqTypeCode()) != 0
                         || "A".compareTo(optionalProgramRule.getOptionalProgramRequirementCode().getRequirementCategory()) != 0)
-                .collect(Collectors.toList()));
+                .toList());
 
         obj.setOptionalProgramRules(finalOptionalProgramRulesList);
     }
@@ -261,7 +260,7 @@ public class EquivalencyRule implements Rule {
     private void handleFailedRules(OptionalProgramRuleProcessor obj, List<OptionalProgramRequirement> finalOptionalProgramRulesList, List<GradRequirement> requirementsMet, List<OptionalProgramRequirement> gradOptionalProgramRulesMatch) {
         List<OptionalProgramRequirement> successfulRules = finalOptionalProgramRulesList.stream()
                 .filter(opr -> opr.getOptionalProgramRequirementCode().isPassed())
-                .collect(Collectors.toList());
+                .toList();
 
         if(gradOptionalProgramRulesMatch.size() != finalOptionalProgramRulesList.size()) {
             List<OptionalProgramRequirement> unusedRules = RuleEngineApiUtils.getCloneOptionalProgramRule(gradOptionalProgramRulesMatch);
@@ -270,7 +269,7 @@ public class EquivalencyRule implements Rule {
         }
 
         List<OptionalProgramRequirement> failedRules = finalOptionalProgramRulesList.stream()
-                .filter(opr -> !opr.getOptionalProgramRequirementCode().isPassed()).collect(Collectors.toList());
+                .filter(opr -> !opr.getOptionalProgramRequirementCode().isPassed()).toList();
 
         if (failedRules.isEmpty()) {
             logger.debug("All the failed assessment match rules met the assessment equivalency requirement for optional program!");
@@ -283,9 +282,9 @@ public class EquivalencyRule implements Rule {
         // if any failed assessments from the previous processors meet the assessment equivalency requirement,
         // then remove it from nonGradReason.
         if (!successfulRules.isEmpty()) {
-            List<String> successfulRuleCodes = successfulRules.stream().map(opr -> opr.getOptionalProgramRequirementCode().getOptProReqCode()).collect(Collectors.toList());
+            List<String> successfulRuleCodes = successfulRules.stream().map(opr -> opr.getOptionalProgramRequirementCode().getOptProReqCode()).toList();
             List<GradRequirement> nonGradReasons = obj.getNonGradReasonsOptionalProgram().stream()
-                    .filter(gr -> !successfulRuleCodes.contains(gr.getRule())).collect(Collectors.toList());
+                    .filter(gr -> !successfulRuleCodes.contains(gr.getRule())).toList();
             obj.setNonGradReasonsOptionalProgram(nonGradReasons);
         }
 
@@ -309,14 +308,14 @@ public class EquivalencyRule implements Rule {
         // Rule# 115,116,118,303,304
         List<String> failedRuleCodes = gradProgramRulesMatch
                 .stream()
-                .filter((pr -> !pr.getProgramRequirementCode().isPassed())).collect(Collectors.toList())
+                .filter((pr -> !pr.getProgramRequirementCode().isPassed())).toList()
                 .stream()
-                .map(fr -> fr.getProgramRequirementCode().getProReqCode()).collect(Collectors.toList());
+                .map(fr -> fr.getProgramRequirementCode().getProReqCode()).toList();
 
         return courseRequirements
                 .stream()
                 .filter(cr -> failedRuleCodes.contains(cr.getRuleCode().getCourseRequirementCode()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<CourseRequirement> getCourseRequirementsForAssessmentsEquivalency(List<OptionalProgramRequirement> gradOptionalProgramRulesMatch) {
@@ -328,14 +327,14 @@ public class EquivalencyRule implements Rule {
         // Rule# 203, 403, 404
         List<String> failedRuleCodes = gradOptionalProgramRulesMatch
                 .stream()
-                .filter((opr -> !opr.getOptionalProgramRequirementCode().isPassed())).collect(Collectors.toList())
+                .filter((opr -> !opr.getOptionalProgramRequirementCode().isPassed())).toList()
                 .stream()
-                .map(fr -> fr.getOptionalProgramRequirementCode().getOptProReqCode()).collect(Collectors.toList());
+                .map(fr -> fr.getOptionalProgramRequirementCode().getOptProReqCode()).toList();
 
         return courseRequirements
                 .stream()
                 .filter(cr -> failedRuleCodes.contains(cr.getRuleCode().getCourseRequirementCode()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private boolean validateAssessmentsEmptyOrFailed(List<ProgramRequirement> gradProgramRulesMatch, List<StudentAssessment> studentAssessments) {
@@ -361,6 +360,5 @@ public class EquivalencyRule implements Rule {
     @Override
     public void setInputData(RuleData inputData) {
         ruleProcessorData = (RuleProcessorData) inputData;
-        logger.debug("EquivalencyRule: Rule Processor Data set.");
     }
 }
